[modify]修改甲方修改需求 2、主业面下面的公司改成：泰心（完成） 5、用户注册页面文字逻辑有误（改：点击注册表示已阅读并同意） 6、公司板块：常见问题标题栏错误（问题反馈改为常见问题） 7、预约陪护板块：标题栏直接写预约陪护（自选改为预约陪护）

--- a/taixinkanghu/src/main/res/layout/activity_login.xml
+++ b/taixinkanghu/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="点击登录表示已阅读并同意 "
+                    android:text="@string/protocol_text"
                     android:textColor="@color/text_color_gray"
                     android:textSize="14.0sp" />
 
