--- a/taixinkanghu/src/main/res/layout/activity_customer_service.xml
+++ b/taixinkanghu/src/main/res/layout/activity_customer_service.xml
@@ -53,7 +53,7 @@
                         android:layout_marginRight="20dp"
                         android:layout_weight="1"
                         android:gravity="right"
-                        android:text="4008-517-517"
+                        android:text="@string/service_phone_number"
                         android:textColor="@color/text_color_black"
                         android:textSize="16.0sp" />
 
