[modify]修改护理员级别名称

--- a/taixinkanghu/src/main/res/layout/activity_appointment.xml
+++ b/taixinkanghu/src/main/res/layout/activity_appointment.xml
@@ -57,7 +57,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="bottom"
                             android:layout_marginLeft="30dp"
-                            android:text="中级护理员" />
+                            android:text="@string/intermediates_junior" />
 
 
                     </LinearLayout>
