--- a/taixinkanghu/src/main/res/layout/include_header.xml
+++ b/taixinkanghu/src/main/res/layout/include_header.xml
@@ -5,7 +5,7 @@
     android:background="@color/main_color">
 
     <ImageButton
-        android:id="@id/btn_back"
+        android:id="@+id/btn_back"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:background="@drawable/bg_btn_translucent"
@@ -13,7 +13,7 @@
         android:visibility="visible" />
 
     <TextView
-        android:id="@id/page_title"
+        android:id="@+id/page_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
