--- a/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
+++ b/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
@@ -1,7 +1,403 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:orientation="vertical"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent">
+<FrameLayout android:id="@+id/appointment_nursing_page"
+			 xmlns:android="http://schemas.android.com/apk/res/android"
+			 android:layout_width="match_parent"
+			 android:layout_height="match_parent">
 
-</LinearLayout>
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical">
+
+		<include
+			android:id="@+id/titile"
+			layout="@layout/include_header"/>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:orientation="vertical">
+
+			<TextView
+				android:layout_width="match_parent"
+				android:layout_height="30dp"
+				android:layout_marginLeft="15dp"
+				android:layout_marginRight="15dp"
+				android:gravity="center_vertical"
+				android:text="@string/apponintment_page_hint_text"
+				android:textColor="@color/main_color"
+				android:textSize="12dp"/>
+
+			<LinearLayout
+				android:id="@+id/name_region"
+				android:layout_width="match_parent"
+				android:layout_height="40dp"
+				android:background="@drawable/bg_bule_frame_top"
+				android:gravity="center_vertical"
+				android:orientation="horizontal">
+
+				<TextView
+					android:id="@+id/name_text"
+					android:layout_width="wrap_content"
+					android:layout_height="30dp"
+					android:layout_marginLeft="20dp"
+					android:gravity="center_vertical"
+					android:text="@string/name_text"/>
+
+
+				<EditText
+					android:id="@id/name"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginRight="30dp"
+					android:layout_weight="1"
+					android:background="#00000000"
+					android:gravity="right"
+					android:hint="@string/name_hint_text"
+					android:imeOptions="actionNext"
+					android:singleLine="true"
+					android:textColor="@android:color/black"
+					android:textColorHint="@color/text_color_gray"
+					android:textSize="14.0sp"/>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:id="@+id/btn_gender"
+				android:layout_width="match_parent"
+				android:layout_height="40dp"
+				android:background="@drawable/bg_bule_frame_all"
+				android:gravity="center_vertical"
+				android:orientation="horizontal">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="30dp"
+					android:layout_marginLeft="20dp"
+					android:gravity="center_vertical"
+					android:text="性别："/>
+
+
+				<TextView
+					android:id="@+id/gender"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:background="#00000000"
+					android:gravity="right"
+					android:hint=""
+					android:imeOptions="actionNext"
+					android:singleLine="true"
+					android:textColor="@android:color/black"
+					android:textColorHint="@color/text_color_gray"
+					android:textSize="14.0sp"/>
+
+				<ImageView
+					android:id="@+id/dwon_gender"
+					android:layout_width="20dp"
+					android:layout_height="20dp"
+					android:layout_marginRight="30dp"
+					android:background="@mipmap/img_down"/>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:id="@+id/btn_age"
+				android:layout_width="match_parent"
+				android:layout_height="40dp"
+				android:background="@drawable/bg_bule_frame_all"
+				android:gravity="center_vertical"
+				android:orientation="horizontal">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="30dp"
+					android:layout_marginLeft="20dp"
+					android:gravity="center_vertical"
+					android:text="年龄："/>
+
+				<TextView
+					android:id="@+id/age"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:background="#00000000"
+					android:gravity="right"
+					android:hint=""
+					android:imeOptions="actionNext"
+					android:singleLine="true"
+					android:textColor="@android:color/black"
+					android:textColorHint="@color/text_color_gray"
+					android:textSize="14.0sp"/>
+
+				<ImageView
+					android:id="@+id/dwon_age"
+					android:layout_width="20dp"
+					android:layout_height="20dp"
+					android:layout_marginRight="30dp"
+					android:background="@mipmap/img_down"/>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:id="@+id/btn_weight"
+				android:layout_width="match_parent"
+				android:layout_height="40dp"
+				android:background="@drawable/bg_bule_frame_all"
+				android:gravity="center_vertical"
+				android:orientation="horizontal">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="30dp"
+					android:layout_marginLeft="20dp"
+					android:gravity="center_vertical"
+					android:text="体重（kg）："/>
+
+				<TextView
+					android:id="@+id/weight"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:background="#00000000"
+					android:gravity="right"
+					android:hint=""
+					android:imeOptions="actionNext"
+					android:singleLine="true"
+					android:textColor="@android:color/black"
+					android:textColorHint="@color/text_color_gray"
+					android:textSize="14.0sp"/>
+
+				<ImageView
+					android:id="@+id/dwon_weight"
+					android:layout_width="20dp"
+					android:layout_height="20dp"
+					android:layout_marginRight="30dp"
+					android:background="@mipmap/img_down"/>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:id="@+id/btn_hospital"
+				android:layout_width="match_parent"
+				android:layout_height="40dp"
+				android:background="@drawable/bg_bule_frame_all"
+				android:gravity="center_vertical"
+				android:orientation="horizontal">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="30dp"
+					android:layout_marginLeft="20dp"
+					android:gravity="center_vertical"
+					android:text="所在医院："/>
+
+				<TextView
+					android:id="@+id/hospital"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:background="#00000000"
+					android:gravity="right"
+					android:hint=""
+					android:imeOptions="actionNext"
+					android:singleLine="true"
+					android:textColor="@android:color/black"
+					android:textColorHint="@color/text_color_gray"
+					android:textSize="14.0sp"/>
+
+				<ImageView
+					android:id="@+id/dwon_hospital"
+					android:layout_width="20dp"
+					android:layout_height="20dp"
+					android:layout_marginRight="30dp"
+					android:background="@mipmap/img_down"/>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="40dp"
+				android:background="@drawable/bg_bule_frame_all"
+				android:gravity="center_vertical"
+				android:orientation="horizontal">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="30dp"
+					android:layout_marginLeft="20dp"
+					android:gravity="center_vertical"
+					android:text="所在科室："/>
+
+				<EditText
+					android:id="@id/name"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginRight="30dp"
+					android:background="#00000000"
+					android:gravity="right"
+					android:hint="点击填写"
+					android:imeOptions="actionNext"
+					android:singleLine="true"
+					android:textColor="@android:color/black"
+					android:textColorHint="@color/text_color_gray"
+					android:textSize="14.0sp"/>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="40dp"
+				android:background="@drawable/bg_bule_frame_all"
+				android:gravity="center_vertical"
+				android:orientation="horizontal">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="30dp"
+					android:layout_marginLeft="20dp"
+					android:gravity="center_vertical"
+					android:text="病房号："/>
+
+				<EditText
+					android:id="@id/name"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginRight="30dp"
+					android:layout_weight="1"
+					android:background="#00000000"
+					android:gravity="right"
+					android:hint="点击填写"
+					android:imeOptions="actionNext"
+					android:singleLine="true"
+					android:textColor="@android:color/black"
+					android:textColorHint="@color/text_color_gray"
+					android:textSize="14.0sp"/>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="40dp"
+				android:background="@drawable/bg_bule_frame_all"
+				android:gravity="center_vertical"
+				android:orientation="horizontal">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="30dp"
+					android:layout_marginLeft="20dp"
+					android:gravity="center_vertical"
+					android:text="床位号："/>
+
+
+				<EditText
+					android:id="@id/name"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginRight="30dp"
+					android:layout_weight="1"
+					android:background="#00000000"
+					android:gravity="right"
+					android:hint="点击填写"
+					android:imeOptions="actionNext"
+					android:singleLine="true"
+					android:textColor="@android:color/black"
+					android:textColorHint="@color/text_color_gray"
+					android:textSize="14.0sp"/>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="40dp"
+				android:background="@drawable/bg_bule_frame_all"
+				android:gravity="center_vertical"
+				android:orientation="horizontal">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="30dp"
+					android:layout_marginLeft="20dp"
+					android:gravity="center_vertical"
+					android:text="病人状态："/>
+
+				<EditText
+					android:id="@id/name"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginRight="30dp"
+					android:layout_weight="1"
+					android:background="#00000000"
+					android:gravity="right"
+					android:hint="点击选择"
+					android:imeOptions="actionNext"
+					android:singleLine="true"
+					android:textColor="@android:color/black"
+					android:textColorHint="@color/text_color_gray"
+					android:textSize="14.0sp"/>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="40dp"
+				android:background="@drawable/bg_bule_frame_bottom"
+				android:gravity="center_vertical"
+				android:orientation="horizontal">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="30dp"
+					android:layout_marginLeft="20dp"
+					android:gravity="center_vertical"
+					android:text="病人状态："/>
+
+				<EditText
+					android:id="@id/name"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginRight="30dp"
+					android:layout_weight="1"
+					android:background="#00000000"
+					android:gravity="right"
+					android:hint="点击选择"
+					android:imeOptions="actionNext"
+					android:singleLine="true"
+					android:textColor="@android:color/black"
+					android:textColorHint="@color/text_color_gray"
+					android:textSize="14.0sp"/>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="40dp"
+				android:gravity="center"
+				android:orientation="horizontal">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/protocol_confirm_text"
+					android:textColor="@color/text_color_gray"
+					android:textSize="14.0sp"/>
+
+				<TextView
+					android:id="@id/btn_protocol"
+					android:layout_width="wrap_content"
+					android:layout_height="44dp"
+					android:gravity="center"
+					android:textColor="@color/main_color"
+					android:textSize="14.0sp"/>
+			</LinearLayout>
+
+		</LinearLayout>
+
+		<include
+			android:id="@+id/bottom"
+			layout="@layout/include_bottom_btn"/>
+
+	</LinearLayout>
+</FrameLayout>
