--- a/taixinkanghu/src/main/res/values/ids.xml
+++ b/taixinkanghu/src/main/res/values/ids.xml
@@ -145,4 +145,5 @@
     <item name="btn_continue" type="id">btn_continue</item>
     <item name="btn_address" type="id">btn_address</item>
     <item name="add_info" type="id">add_info</item>
+    <item name="btn_bottom" type="id">btn_bottom</item>
 </resources>
