--- a/taixinkanghu/src/main/res/layout/activity_select_nurse.xml
+++ b/taixinkanghu/src/main/res/layout/activity_select_nurse.xml
@@ -31,7 +31,7 @@
 				android:id="@+id/tips_region">
 
 				<TextView
-					android:id="@+id/data_tips"
+					android:id="@+id/tips_tv"
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
 					android:background="#fff"
