--- a/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
+++ b/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
@@ -47,7 +47,7 @@
 
 
 				<EditText
-					android:id="@id/name"
+					android:id="@+id/name"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_marginRight="30dp"
