--- a/taixinkanghu/src/main/res/layout/activity_shopping.xml
+++ b/taixinkanghu/src/main/res/layout/activity_shopping.xml
@@ -110,7 +110,7 @@
 				android:layout_width="1dp"
 				android:layout_height="match_parent"
 				android:background="@color/main_color"
-				android:id="@+id/dividing_line"/>
+				android:id="@+id/dividing_line_1"/>
 
 			<LinearLayout
 				android:layout_width="match_parent"
