[modify]隐藏空闲状态显示textview

--- a/taixinkanghu/src/main/res/layout/item_worker_list.xml
+++ b/taixinkanghu/src/main/res/layout/item_worker_list.xml
@@ -147,7 +147,8 @@
                     android:gravity="right"
                     android:singleLine="true"
                     android:text="服务中"
-                    android:textSize="13.0sp" />
+                    android:textSize="13.0sp"
+                    android:visibility="gone"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
