--- a/taixinkanghu/src/main/res/layout/fragment_home.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_home.xml
@@ -1,70 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:orientation="vertical"
+<LinearLayout android:id="@+id/home_linearlayout"
+			  xmlns:android="http://schemas.android.com/apk/res/android"
 			  android:layout_width="match_parent"
 			  android:layout_height="match_parent"
-			  android:id="@+id/home_linearlayout">
+			  android:orientation="vertical">
 
 	<!--logo+名称-->
-	<include layout="@layout/include_header"
-			 android:id="@+id/title"/>
+	<include
+		android:id="@+id/title"
+		layout="@layout/include_header"/>
 
 	<!--功能区-->
 	<LinearLayout
-		android:orientation="vertical"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="match_parent"
+		android:orientation="vertical">
 
 		<!--展示图片：公司/优惠信息-->
 		<LinearLayout
-			android:orientation="vertical"
+			android:id="@+id/display_imgs_linearlayout"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:id="@+id/display_imgs_linearlayout"
-			android:layout_gravity="top|center_vertical">
+			android:layout_gravity="top|center_vertical"
+			android:orientation="vertical">
 
 			<ViewFlipper
+				android:id="@+id/view_flipper"
 				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
-				android:id="@+id/view_flipper"/>
+				android:layout_height="fill_parent"/>
 		</LinearLayout>
 
 		<!--主要功能按钮-->
 		<LinearLayout
-			android:orientation="vertical"
+			android:id="@+id/function_linearlayout"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:id="@+id/function_linearlayout"
-			android:layout_gravity="bottom|center_vertical">
+			android:layout_gravity="bottom|center_vertical"
+			android:orientation="vertical">
 
 			<ScrollView
+				android:id="@+id/scrollview"
 				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:id="@+id/scrollview">
+				android:layout_height="match_parent">
 
 				<LinearLayout
-					android:orientation="vertical"
+					android:id="@+id/frame_linearlayout"
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
-					android:id="@+id/frame_linearlayout">
+					android:orientation="vertical">
 
 					<LinearLayout
-						android:orientation="vertical"
+						android:id="@+id/ele_linearlayout"
 						android:layout_width="match_parent"
 						android:layout_height="match_parent"
-						android:id="@+id/ele_linearlayout">
+						android:orientation="vertical">
 
 						<GridLayout
+							android:id="@+id/function_gridlayout"
 							android:layout_width="match_parent"
-							android:layout_height="match_parent"
-							android:id="@+id/function_gridlayout">
+							android:layout_height="match_parent">
 						</GridLayout>
 					</LinearLayout>
-
 				</LinearLayout>
 			</ScrollView>
 		</LinearLayout>
 	</LinearLayout>
-
-
 </LinearLayout>
