--- a/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
+++ b/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:id="@+id/appointment_nursing_page"
-			 xmlns:android="http://schemas.android.com/apk/res/android"
-			 android:layout_width="match_parent"
-			 android:layout_height="match_parent">
+<FrameLayout
+	android:id="@+id/appointment_nursing_page"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -64,35 +65,37 @@
 			</LinearLayout>
 
 			<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="40dp"
-			android:background="@drawable/bg_bule_frame_all"
-			android:gravity="center_vertical"
-			android:orientation="horizontal">
-
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="30dp"
-				android:layout_marginLeft="20dp"
-				android:gravity="center_vertical"
-				android:text="手机号码："/>
-
-			<EditText
-				android:id="@+id/bed_id_tv"
 				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginRight="30dp"
-				android:layout_weight="1"
-				android:background="#00000000"
-				android:gravity="right"
-				android:hint="点击填写"
-				android:imeOptions="actionNext"
-				android:singleLine="true"
-				android:textColor="@android:color/black"
-				android:textColorHint="@color/text_color_gray"
-				android:textSize="14.0sp"/>
+				android:layout_height="40dp"
+				android:background="@drawable/bg_bule_frame_all"
+				android:gravity="center_vertical"
+				android:orientation="horizontal">
 
-		</LinearLayout>
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="30dp"
+					android:layout_marginLeft="20dp"
+					android:gravity="center_vertical"
+					android:text="手机号码："/>
+
+				<EditText
+					android:id="@+id/phone_number_tv"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginRight="30dp"
+					android:layout_weight="1"
+					android:background="#00000000"
+					android:gravity="right"
+					android:hint="点击填写"
+					android:imeOptions="actionNext"
+					android:maxLength="11"
+					android:phoneNumber="true"
+					android:singleLine="true"
+					android:textColor="@android:color/black"
+					android:textColorHint="@color/text_color_gray"
+					android:textSize="14.0sp"/>
+
+			</LinearLayout>
 
 			<LinearLayout
 				android:id="@+id/btn_gender"
@@ -222,8 +225,8 @@
 					android:layout_height="30dp"
 					android:layout_marginLeft="10dp"
 					android:gravity="center_vertical"
-					android:textColor="@color/text_color_red"
-					android:text="*"/>
+					android:text="*"
+					android:textColor="@color/text_color_red"/>
 
 				<TextView
 					android:layout_width="wrap_content"
@@ -267,8 +270,8 @@
 					android:layout_height="30dp"
 					android:layout_marginLeft="10dp"
 					android:gravity="center_vertical"
-					android:textColor="@color/text_color_red"
-					android:text="*"/>
+					android:text="*"
+					android:textColor="@color/text_color_red"/>
 
 				<TextView
 					android:layout_width="wrap_content"
@@ -278,6 +281,7 @@
 					android:text="所在科室："/>
 
 				<EditText
+					android:id="@+id/department_tv"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_marginRight="30dp"
@@ -288,8 +292,7 @@
 					android:singleLine="true"
 					android:textColor="@android:color/black"
 					android:textColorHint="@color/text_color_gray"
-					android:textSize="14.0sp"
-					android:id="@+id/department_tv"/>
+					android:textSize="14.0sp"/>
 
 			</LinearLayout>
 
@@ -298,8 +301,8 @@
 				android:layout_height="40dp"
 				android:background="@drawable/bg_bule_frame_all"
 				android:gravity="center_vertical"
-				android:visibility="gone"
-				android:orientation="horizontal">
+				android:orientation="horizontal"
+				android:visibility="gone">
 
 				<TextView
 					android:layout_width="wrap_content"
@@ -330,8 +333,8 @@
 				android:layout_height="40dp"
 				android:background="@drawable/bg_bule_frame_all"
 				android:gravity="center_vertical"
-				android:visibility="gone"
-				android:orientation="horizontal">
+				android:orientation="horizontal"
+				android:visibility="gone">
 
 				<TextView
 					android:layout_width="wrap_content"
@@ -371,8 +374,8 @@
 					android:layout_height="30dp"
 					android:layout_marginLeft="10dp"
 					android:gravity="center_vertical"
-					android:textColor="@color/text_color_red"
-					android:text="*"/>
+					android:text="*"
+					android:textColor="@color/text_color_red"/>
 
 				<TextView
 					android:layout_width="wrap_content"
@@ -416,8 +419,8 @@
 					android:layout_height="30dp"
 					android:layout_marginLeft="10dp"
 					android:gravity="center_vertical"
-					android:textColor="@color/text_color_red"
-					android:text="*"/>
+					android:text="*"
+					android:textColor="@color/text_color_red"/>
 
 				<TextView
 					android:layout_width="wrap_content"
