--- a/taixinkanghu/src/main/res/layout/activity_main.xml
+++ b/taixinkanghu/src/main/res/layout/activity_main.xml
@@ -16,6 +16,9 @@
 			android:layout_height="0dp"
 			android:layout_weight="1" />
 
+		<include layout="@layout/item_dividing_line_horizontal"
+				 android:id="@+id/dividing_line"/>
+
 		<TabWidget
 			android:id="@android:id/tabs"
 			android:layout_width="match_parent"
