--- a/taixinkanghu/src/main/res/layout/fragment_select_patient_state.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_patient_state.xml
@@ -1,50 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+			  android:layout_width="match_parent"
+			  android:layout_height="match_parent"
+			  android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="214dp"
-        android:background="@color/mask">
+	<LinearLayout
+		android:id="@+id/title_region"
+		android:layout_width="match_parent"
+		android:layout_height="214dp"
+		android:background="@color/mask"
+		android:orientation="vertical">
 
-    </LinearLayout>
+	</LinearLayout>
 
-    <TextView
-        android:id="@+id/btn_state_care_myself"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/bg_order_btn"
-        android:gravity="center"
-        android:text="@string/btn_state_care_myself_text"
-        android:textColor="#ff666666"
-        android:textSize="14.0sp" />
+	<TextView
+		android:id="@+id/btn_state_care_myself"
+		android:layout_width="match_parent"
+		android:layout_height="48dp"
+		android:background="@drawable/bg_order_btn"
+		android:gravity="center"
+		android:text="@string/btn_state_care_myself_text"
+		android:textColor="#ff666666"
+		android:textSize="14.0sp"/>
 
-    <TextView
-        android:id="@+id/btn_state_half_care_myself"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/bg_order_btn"
-        android:gravity="center"
-        android:text="@string/btn_state_half_care_myself_text"
-        android:textColor="#ff666666"
-        android:textSize="14.0sp" />
+	<TextView
+		android:id="@+id/btn_state_half_care_myself"
+		android:layout_width="match_parent"
+		android:layout_height="48dp"
+		android:background="@drawable/bg_order_btn"
+		android:gravity="center"
+		android:text="@string/btn_state_half_care_myself_text"
+		android:textColor="#ff666666"
+		android:textSize="14.0sp"/>
 
-    <TextView
-        android:id="@+id/btn_state_not_care_myself"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/bg_order_btn"
-        android:gravity="center"
-        android:text="@string/btn_state_not_care_myself_text"
-        android:textColor="#ff666666"
-        android:textSize="14.0sp" />
+	<TextView
+		android:id="@+id/btn_state_not_care_myself"
+		android:layout_width="match_parent"
+		android:layout_height="48dp"
+		android:background="@drawable/bg_order_btn"
+		android:gravity="center"
+		android:text="@string/btn_state_not_care_myself_text"
+		android:textColor="#ff666666"
+		android:textSize="14.0sp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/all_null">
+	<LinearLayout
+		android:id="@+id/bottom_region"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:background="@color/all_null"
+		android:orientation="vertical">
 
-    </LinearLayout>
+	</LinearLayout>
 </LinearLayout>
