--- a/taixinkanghu/src/main/res/layout/activity_my_setting.xml
+++ b/taixinkanghu/src/main/res/layout/activity_my_setting.xml
@@ -14,7 +14,7 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="54dp"
             android:layout_marginTop="10dp"
@@ -29,14 +29,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_gravity="center">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="您还没有登录哦~"
                     android:textColor="@color/text_color_black"
-                    android:textSize="16.0sp" />
+                    android:textSize="16.0sp"
+                    android:id="@+id/login_tips_tv"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -46,11 +48,12 @@
                     android:text="登录"
                     android:gravity="right"
                     android:textColor="@color/text_color_black"
-                    android:textSize="16.0sp" />
+                    android:textSize="16.0sp"
+                    android:id="@+id/login_tv"/>
 
             </LinearLayout>
 
-        </LinearLayout>
+        </FrameLayout>
 
     </LinearLayout>
 
